check_output.txt
    Checking CoTuong v0.1.0 (/home/tchuong/Màn hình nền/GameCoTuong)
error[E0432]: unresolved import `wasm_bindgen`
 --> src/components/board.rs:7:5
  |
7 | use wasm_bindgen::JsCast;
  |     ^^^^^^^^^^^^ help: a similar path exists: `web_sys::wasm_bindgen`

error[E0599]: no method named `dyn_into` found for struct `js_sys::Object` in the current scope
  --> src/components/board.rs:86:27
   |
86 | ...   res.map(|o| o.dyn_into::<CanvasRenderingContex...
   |                     ^^^^^^^^
   |
  ::: /home/tchuong/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/wasm-bindgen-0.2.106/src/cast.rs:43:8
   |
43 |     fn dyn_into<T>(self) -> Result<T, Self>
   |        -------- the method is available for `js_sys::Object` here
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `JsCast` which provides `dyn_into` is implemented but not in scope; perhaps you want to import it
   |
 1 + use js_sys::wasm_bindgen::JsCast;
   |
help: there is a method `into` with a similar name
   |
86 -             res.map(|o| o.dyn_into::<CanvasRenderingContext2d>().ok())
86 +             res.map(|o| o.into::<CanvasRenderingContext2d>().ok())
   |

error[E0282]: type annotations needed for `std::option::Option<_>`
  --> src/components/board.rs:91:13
   |
91 |         let Some(ctx) = ctx else { return };
   |             ^^^^^^^^^
...
94 |         ctx.set_fill_style(&"#eecfa1".into());
   |         --- type must be known at this point
   |
help: consider giving this pattern a type, where the placeholders `_` are specified
   |
91 |         let Some(ctx): std::option::Option<T> = ctx else { return };
   |                      ++++++++++++++++++++++++

error[E0599]: no method named `track` found for struct `ReadSignal<T>` in the current scope
   --> src/components/board.rs:270:20
    |
270 |         game_state.track(); // Track changes
    |                    ^^^^^ method not found in `ReadSignal<GameState>`
    |
   ::: /home/tchuong/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/leptos_reactive-0.6.15/src/signal.rs:145:8
    |
145 |     fn track(&self) {
    |        ----- the method is available for `ReadSignal<GameState>` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `SignalWith` which provides `track` is implemented but not in scope; perhaps you want to import it
    |
  1 + use leptos::SignalWith;
    |

error[E0599]: no method named `track` found for struct `ReadSignal<T>` in the current scope
   --> src/components/board.rs:271:18
    |
271 |         selected.track();
    |                  ^^^^^ method not found in `ReadSignal<Option<...>>`
    |
   ::: /home/tchuong/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/leptos_reactive-0.6.15/src/signal.rs:145:8
    |
145 |     fn track(&self) {
    |        ----- the method is available for `ReadSignal<std::option::Option<(usize, usize)>>` here
    |
    = help: items from traits can only be used if the trait is in scope
    = note: the full name for the type has been written to '/home/tchuong/Màn hình nền/GameCoTuong/target/wasm32-unknown-unknown/debug/deps/CoTuong-b95debd31aae7709.long-type-12574717195307548487.txt'
    = note: consider using `--verbose` to print the full type name to the console
help: trait `SignalWith` which provides `track` is implemented but not in scope; perhaps you want to import it
    |
  1 + use leptos::SignalWith;
    |

error[E0599]: no method named `get_bounding_client_rect` found for struct `leptos::HtmlElement<Canvas>` in the current scope
   --> src/components/board.rs:279:27
    |
279 |         let rect = canvas.get_bounding_client_rect();
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `leptos::HtmlElement<Canvas>`

error: use of deprecated method `web_sys::CanvasRenderingContext2d::set_fill_style`
   --> src/components/board.rs:242:13
    |
242 |         ctx.set_fill_style(&"#f0d9b5".into());
    |             ^^^^^^^^^^^^^^
    |
    = note: `-D deprecated` implied by `-D warnings`
    = help: to override `-D warnings` add `#[allow(deprecated)]`

error: use of deprecated method `web_sys::CanvasRenderingContext2d::set_stroke_style`
   --> src/components/board.rs:254:13
    |
254 |         ctx.set_stroke_style(&color_str.into());
    |             ^^^^^^^^^^^^^^^^

error: use of deprecated method `web_sys::CanvasRenderingContext2d::set_fill_style`
   --> src/components/board.rs:259:13
    |
259 |         ctx.set_fill_style(&color_str.into());
    |             ^^^^^^^^^^^^^^

Some errors have detailed explanations: E0282, E0432, E0599.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `CoTuong` (bin "CoTuong") due to 9 previous errors
